--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ Security maintenance is the task of a good computer engineer.
       <div class="right">
         <img
           class="img1"
-          src="https://media.licdn.com/dms/image/D4E03AQFIUpzUhkoXTw/profile-displayphoto-shrink_800_800/0/1666019233498?e=1677110400&v=beta&t=FtFZ-JwPZZzODiQ1ncwX4Eehrpg_RqB9wxnmqwg5wLw"
-          alt=""
+          src="src="https://avatars.githubusercontent.com/u/117700812?v=4"alt=""
         />
       </div>
     </div>
